--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "JSON Formatter",
-  "version": "0.6.0",
+  "name": "JSON Formatter(DIY)",
+  "version": "0.1.0",
   "manifest_version": 2,
   "description": "Makes JSON easy to read. Open source.",
   "homepage_url": "https://github.com/callumlocke/json-formatter",
